@@ -1,6 +1,7 @@
 package cc.ghosty.kamoof.commands;
 
-import cc.ghosty.kamoof.KamoofSMP;
+import cc.ghosty.kamoof.KamoofPlugin;
+import cc.ghosty.kamoof.features.FeatureManager;
 import cc.ghosty.kamoof.utils.*;
 import com.samjakob.spigui.buttons.SGButton;
 import com.samjakob.spigui.menu.SGMenu;
@@ -16,12 +17,21 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.function.Predicate;
 
-import static cc.ghosty.kamoof.KamoofSMP.*;
+import static cc.ghosty.kamoof.KamoofPlugin.*;
 
+/**
+ * Menu de Configuration en-jeu global du KamoofSMP.
+ * <p>
+ * Ouvrable avec <code>/kamoofsmp config</code> en jeu.
+ * @since 1.4
+ */
 public final class ConfigGUI {
 	
+	/**
+	 * @return Le {@link SGMenu} principal
+	 */
 	public static SGMenu getMainMenu() {
-		SGMenu menu = KamoofSMP.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE_MAIN"), 3);
+		SGMenu menu = KamoofPlugin.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE_MAIN"), 3);
 		
 		/* Remplissage */
 		{
@@ -44,7 +54,7 @@ public final class ConfigGUI {
 			List<String> keys = Lang.languages.keySet().stream().toList();
 			int index = (keys.indexOf(Lang.getLocale()) + 1) % keys.size();
 			config().set("language", keys.get(index));
-			KamoofSMP.getInstance().saveConfig();
+			KamoofPlugin.getInstance().saveConfig();
 			Lang.init();
 			event.getWhoClicked().openInventory(getMainMenu().getInventory());
 		}));
@@ -75,8 +85,11 @@ public final class ConfigGUI {
 		return menu;
 	}
 	
+	/**
+	 * @return Le {@link SGMenu} des paramètres de Disguise & Drop Head
+	 */
 	public static SGMenu getDisguiseMenu() {
-		SGMenu menu = KamoofSMP.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE") + ": §f§l" + Lang.get("CFG_TITLE_DISGUISE"), 3);
+		SGMenu menu = KamoofPlugin.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE") + ": §f§l" + Lang.get("CFG_TITLE_DISGUISE"), 3);
 		/* Remplissage */
 		{
 			ItemStack item = new ItemStack(Material.BLACK_STAINED_GLASS_PANE);
@@ -93,7 +106,7 @@ public final class ConfigGUI {
 		setButtonBool(menu, 10, "disguise.place-head", getStrings("CFG_DISGUISE_PLACEHEAD"));
 		setButtonBool(menu, 11, "disguise.give-back", getStrings("CFG_DISGUISE_GIVEBACK"));
 		
-		setButtonBool(menu, 13, "restaure", getStrings("CFG_RESTAURE"));
+		setButtonBool(menu, 13, "disguise.restaure", getStrings("CFG_RESTAURE"));
 		
 		setButtonBool(menu, 15, "drophead.enabled", getStrings("CFG_DROPHEAD_ENABLED"));
 		setButtonBool(menu, 16, "drophead.stackable", getStrings("CFG_DROPHEAD_STACKABLE"));
@@ -101,8 +114,11 @@ public final class ConfigGUI {
 		return menu;
 	}
 	
+	/**
+	 * @return Le {@link SGMenu} des paramètres du Rituel
+	 */
 	public static SGMenu getRitualMenu() {
-		SGMenu menu = KamoofSMP.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE") + ": §c§l" + Lang.get("CFG_TITLE_RITUAL"), 6);
+		SGMenu menu = KamoofPlugin.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE") + ": §c§l" + Lang.get("CFG_TITLE_RITUAL"), 6);
 		/* Remplissage */
 		{
 			ItemStack item = new ItemStack(Material.BLACK_STAINED_GLASS_PANE);
@@ -117,7 +133,7 @@ public final class ConfigGUI {
 		setButtonMainMenu(menu, 4);
 		
 		setButtonBool(menu, 9, "ritual.enabled", getStrings("CFG_RITUAL_ENABLED"));
-		setButtonInt(menu, 10, "ritual.dupelimit", value -> Math.max(0, Math.min(9, value)), 1, getStrings("CFG_RITUAL_DUPELIMIT"));
+		setButtonInt(menu, 10, "ritual.dupelimit", value -> Math.max(1, Math.min(9, value)), 1, getStrings("CFG_RITUAL_DUPELIMIT"));
 		setButtonInt(menu, 11, "ritual.min-time", value -> Math.max(0, Math.min(value, Math.min(24000, config().getInt("ritual.max-time")))), 500, getStrings("CFG_RITUAL_MINTIME"));
 		setButtonInt(menu, 12, "ritual.max-time", value -> Math.min(24000, Math.max(value, Math.max(0, config().getInt("ritual.min-time")))), 500, getStrings("CFG_RITUAL_MAXTIME"));
 		
@@ -130,12 +146,12 @@ public final class ConfigGUI {
 			Arrays.asList(1, 2, 3, 4, 5, 6, 8, 9, 10, 12, 15, 16, 18, 20, 24, 25, 30, 36, 40, 45, 48, 50, 60, 72, 75, 80, 90, 100, 120, 125, 144, 150, 180, 200, 225, 240, 250, 300, 360, 375, 400, 450, 500, 600, 720, 750, 900, 1000, 1125, 1200, 1500, 1800, 2000, 2250, 3000, 3600, 4500, 6000, 9000, 18000),
 			getStrings("CFG_RITUAL_ANIM_TIMEINCR")
 		);
-		setButtonString(menu, 31, "ritual.animation.color", value -> ColorResolver.getColor(value) != null, getStrings("CFG_RITUAL_ANIM_COLOR"));
+		setButtonColor(menu, 31, "ritual.animation.color", getStrings("CFG_RITUAL_ANIM_COLOR"));
 		setButtonDouble(menu, 32, "ritual.animation.size", value -> Math.max(0.1, Math.min(10, value)), 0.1, getStrings("CFG_RITUAL_ANIM_SIZE"));
 		
 		setButtonDouble(menu, 37, "ritual.animation.sphere.radius", value -> Math.max(0.5, Math.min(5, value)), 0.1, getStrings("CFG_RITUAL_SPH_RADIUS"));
 		setButtonInt(menu, 38, "ritual.animation.sphere.quantity", value -> Math.max(0, value), 50, getStrings("CFG_RITUAL_SPH_QT"));
-		setButtonString(menu, 39, "ritual.animation.sphere.color", value -> ColorResolver.getColor(value) != null, getStrings("CFG_RITUAL_SPH_COLOR"));
+		setButtonColor(menu, 39, "ritual.animation.sphere.color", getStrings("CFG_RITUAL_SPH_COLOR"));
 		setButtonNote(menu, 40, "CFG_RITUAL_SPH_NOTE");
 		setButtonDouble(menu, 41, "ritual.animation.sphere.size", value -> Math.max(0.1, Math.min(10, value)), 0.1, getStrings("CFG_RITUAL_SPH_SIZE"));
 		setButtonInt(menu, 42, "ritual.animation.sphere.lava-chance", value -> Math.max(0, Math.min(100, value)), 1, getStrings("CFG_RITUAL_SPH_LAVACHANCE"));
@@ -152,8 +168,11 @@ public final class ConfigGUI {
 		return menu;
 	}
 	
+	/**
+	 * @return Le {@link SGMenu} des paramètres du MaceLimiter & AutoUpdater
+	 */
 	public static SGMenu getOtherMenu() {
-		SGMenu menu = KamoofSMP.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE") + ": §7§l" + Lang.get("CFG_TITLE_OTHER"), 3);
+		SGMenu menu = KamoofPlugin.getSpiGUI().create("§a§l" + Lang.get("CFG_TITLE") + ": §7§l" + Lang.get("CFG_TITLE_OTHER"), 3);
 		/* Remplissage */
 		{
 			ItemStack item = new ItemStack(Material.BLACK_STAINED_GLASS_PANE);
@@ -176,6 +195,11 @@ public final class ConfigGUI {
 		return menu;
 	}
 	
+	/**
+	 * Ajoute un bouton pour retourner au menu principal.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 */
 	private static void setButtonMainMenu(SGMenu menu, int slot) {
 		ItemStack item = new ItemStack(Material.ARROW);
 		ItemMeta meta = item.getItemMeta();
@@ -185,6 +209,12 @@ public final class ConfigGUI {
 		menu.setButton(slot, new SGButton(item).withListener(event -> event.getWhoClicked().openInventory(getMainMenu().getInventory())));
 	}
 	
+	/**
+	 * Ajoute un bouton pour les notes (menu principal).
+	 * @param menu Le menu à modifier (menu principal)
+	 * @param slot Le slot où placer l'item
+	 * @param key La clé de langue
+	 */
 	private static void setButtonNote(SGMenu menu, int slot, String key) {
 		ItemStack item = new ItemStack(Material.SPECTRAL_ARROW);
 		ItemMeta meta = item.getItemMeta();
@@ -210,6 +240,13 @@ public final class ConfigGUI {
 		menu.setButton(slot, new SGButton(item));
 	}
 	
+	/**
+	 * Ajoute un bouton pour un booléen.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 * @param path La clé du paramètre
+	 * @param strings Les valeurs de langue
+	 */
 	private static void setButtonBool(SGMenu menu, int slot, String path, Duo<String, ArrayList<String>> strings) {
 		boolean enabled = config().getBoolean(path);
 		ItemStack item = new ItemStack(enabled ? Material.LIME_WOOL : Material.RED_WOOL);
@@ -221,11 +258,21 @@ public final class ConfigGUI {
 		menu.setButton(slot, new SGButton(item).withListener(event -> {
 			config().set(path, !enabled);
 			getInstance().saveConfig();
+			FeatureManager.refresh();
 			setButtonBool(menu, slot, path, strings);
 			menu.refreshInventory(event.getWhoClicked());
 		}));
 	}
 	
+	/**
+	 * Ajoute un bouton pour un nombre entier.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 * @param path La clé du paramètre
+	 * @param validate La modification (si nécéssaire) à faire de la nouvelle valeur
+	 * @param incr L'incrémentation de la valeur par clic
+	 * @param strings Les valeurs de langue
+	 */
 	private static void setButtonInt(SGMenu menu, int slot, String path, Function<Integer, Integer> validate, int incr, Duo<String, ArrayList<String>> strings) {
 		int value = config().getInt(path);
 		ItemStack item = new ItemStack(Material.YELLOW_WOOL, Math.max(1, Math.min(64, (int) Math.floor((double) value / incr))));
@@ -248,6 +295,15 @@ public final class ConfigGUI {
 		}));
 	}
 	
+	/**
+	 * Ajoute un bouton pour un nombre décimal.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 * @param path La clé du paramètre
+	 * @param validate La modification (si nécéssaire) à faire de la nouvelle valeur
+	 * @param incr L'incrémentation de la valeur par clic
+	 * @param strings Les valeurs de langue
+	 */
 	private static void setButtonDouble(SGMenu menu, int slot, String path, Function<Double, Double> validate, double incr, Duo<String, ArrayList<String>> strings) {
 		double value = config().getDouble(path);
 		ItemStack item = new ItemStack(Material.ORANGE_WOOL, Math.max(1, Math.min(64, (int) Math.floor(value / incr))));
@@ -271,6 +327,14 @@ public final class ConfigGUI {
 		}));
 	}
 	
+	/**
+	 * Ajoute un bouton pour une valeur parmi une liste.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 * @param path La clé du paramètre
+	 * @param values La liste des valeurs acceptées
+	 * @param strings Les valeurs de langue
+	 */
 	private static void setButtonValues(SGMenu menu, int slot, String path, List<?> values, Duo<String, ArrayList<String>> strings) {
 		Object value = config().get(path);
 		ItemStack item = new ItemStack(Material.WHITE_WOOL);
@@ -307,6 +371,14 @@ public final class ConfigGUI {
 		}));
 	}
 	
+	/**
+	 * Ajoute un bouton pour un texte.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 * @param path La clé du paramètre
+	 * @param predicate La vérification de la valeur
+	 * @param strings Les valeurs de langue
+	 */
 	private static void setButtonString(SGMenu menu, int slot, String path, Predicate<String> predicate, Duo<String, ArrayList<String>> strings) {
 		String value = config().getString(path);
 		ItemStack item = new ItemStack(Material.CYAN_WOOL);
@@ -330,11 +402,11 @@ public final class ConfigGUI {
 						config().set(path, newValue);
 						getInstance().saveConfig();
 						setButtonString(menu, slot, path, predicate, strings);
-						return Arrays.asList(AnvilGUI.ResponseAction.close());
+						return List.of(AnvilGUI.ResponseAction.close());
 					}
-					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, Message.toBaseComponent("<red>" + Lang.get("CFG_INVALID_VALUE")));
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, Message.toBaseComponent(Lang.get("CFG_INVALID_VALUE")));
 					player.playSound(player.getLocation(), Sound.ITEM_SHIELD_BLOCK, SoundCategory.MASTER, 0.3f, 1.5f);
-					return List.of();
+					return List.of(AnvilGUI.ResponseAction.close());
 				})
 				.onClose(stateSnapshot -> {
 					stateSnapshot.getPlayer().openInventory(menu.getInventory());
@@ -343,6 +415,59 @@ public final class ConfigGUI {
 		}));
 	}
 	
+	/**
+	 * Ajoute un bouton pour une couleur.
+	 * @param menu Le menu à modifier
+	 * @param slot Le slot où placer l'item
+	 * @param path La clé du paramètre
+	 * @param strings Les valeurs de langue
+	 */
+	private static void setButtonColor(SGMenu menu, int slot, String path, Duo<String, ArrayList<String>> strings) {
+		String value = config().getString(path).toLowerCase().trim();
+		Color color = ColorResolver.getColor(value);
+		ItemStack item = new ItemStack(Material.CYAN_WOOL);
+		ItemMeta meta = item.getItemMeta();
+		meta.addItemFlags(ItemFlag.values());
+		meta.setDisplayName("§3§l" + strings.getA() + ": "+ColorResolver.toLegacy(color)+"§l" + value);
+		meta.setLore(strings.getB());
+		item.setItemMeta(meta);
+		
+		menu.setButton(slot, new SGButton(item).withListener(event -> {
+			if (!(event.getWhoClicked() instanceof Player player))
+				return;
+			new AnvilGUI.Builder().plugin(getInstance())
+				.title("§3§l" + strings.getA())
+				.text(value)
+				.onClick((clickedSlot, stateSnapshot) -> {
+					if (clickedSlot != 2)
+						return List.of();
+					String newValue = stateSnapshot.getText().trim();
+					Color newColor = ColorResolver.getColor(newValue);
+					if (newColor != null) {
+						config().set(path, newValue);
+						getInstance().saveConfig();
+						setButtonColor(menu, slot, path, strings);
+						return List.of(AnvilGUI.ResponseAction.close());
+					}
+					player.spigot().sendMessage(ChatMessageType.ACTION_BAR, Message.toBaseComponent(Lang.get("CFG_INVALID_VALUE")));
+					player.playSound(player.getLocation(), Sound.ITEM_SHIELD_BLOCK, SoundCategory.MASTER, 0.3f, 1.5f);
+					return List.of(AnvilGUI.ResponseAction.close());
+				})
+				.onClose(stateSnapshot -> {
+					stateSnapshot.getPlayer().openInventory(menu.getInventory());
+				})
+				.open(player);
+		}));
+	}
+	
+	/**
+	 * Récupère les valeurs de la langue choisie.
+	 * <p>
+	 * Est retourné en premier élément le nom du paramètre.
+	 * <p>
+	 * Est retourné en second élément la description du paramètre. Celle-ci est divisée en segments de plus ou moins 40 caractères.
+	 * @param key La clé de langue
+	 */
 	private static Duo<String, ArrayList<String>> getStrings(String key) {
 		ArrayList<String> lore = new ArrayList<>();
 		String[] split = Lang.get(key).split("\\|", 2);
